[project]
name = "arctic-harvester"
version = "0.1.0"
description = "Batch Reddit data downloads through the Arctic Shift download tool."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.20",
    "tqdm>=4.66",
]

[project.scripts]
arctic-harvester = "arctic_harvester.cli:main"

[tool.setuptools.packages.find]
include = ["arctic_harvester*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
